# Speeqr-Audio-Synchronization-Server-C-

./: README.md
Speeqr/: CMakeLists.txt
Speeqr/client/: app.js  index.html
Speeqr/server/: NtpServer.cpp  NtpServer.hpp  main.cpp
